// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type default (none) 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type error 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      type="error"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type info 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      type="info"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type primary 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      type="primary"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type secondary 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      type="secondary"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type success 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      type="success"
    />
  </Ripples>
</div>
`;

exports[`<Button /> handles various types ([none], primary, secondary, error, warning, info, success) type warning 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
      type="warning"
    />
  </Ripples>
</div>
`;

exports[`<Button /> match snapshot 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "lineHeight": 0,
    }
  }
>
  <Ripples
    color="rgba(0, 0, 0, .3)"
    during={600}
    onClick={[Function]}
    style={Object {}}
  >
    <styled.button
      onClick={null}
      style={
        Object {
          "margin": 0,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
        }
      }
    />
  </Ripples>
</div>
`;

exports[`<Button /> should render a Button 1`] = `
<ThemeProvider
  theme={
    Object {
      "background": Object {
        "dark": "#1b3c4f",
        "light": undefined,
      },
      "border": Object {
        "default": "1px solid #e9e9e9",
      },
      "button": Object {
        "backgroundColor": "rgb(242, 242, 242)",
        "borderColor": "rgb(216, 216, 216)",
        "color": "rgb(53, 53, 53)",
      },
      "button:danger": Object {
        "backgroundColor": "#d13f48",
        "borderColor": "#d13f48",
        "color": "#F3F3F2",
      },
      "button:danger:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#d13f48",
        "color": "#d13f48",
      },
      "button:hover": Object {
        "backgroundColor": "rgb(216, 216, 216)",
        "borderColor": "rgb(153, 153, 153)",
        "color": "rgb(53, 53, 53)",
      },
      "button:primary": Object {
        "backgroundColor": "#26a29a",
        "borderColor": "#00897a",
        "color": "#F3F3F2",
      },
      "button:primary:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#00897a",
        "color": "#26a29a",
      },
      "button:secondary": Object {
        "backgroundColor": "#1b3c4f",
        "borderColor": "#1c313f",
        "color": "#F3F3F2",
      },
      "button:secondary:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#1c313f",
        "color": "#1b3c4f",
      },
      "button:success": Object {
        "backgroundColor": "#009688",
        "borderColor": "#009688",
        "color": "#F3F3F2",
      },
      "button:success:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#009688",
        "color": "#009688",
      },
      "button:warning": Object {
        "backgroundColor": "#ff9800",
        "borderColor": "#ff9800",
        "color": "#F3F3F2",
      },
      "button:warning:hover": Object {
        "backgroundColor": "#F3F3F2",
        "borderColor": "#ff9800",
        "color": "#ff9800",
      },
      "dimensions": Object {
        "mainHeaderHeight": "80px",
      },
      "fontsAndColor": Object {
        "dark": Object {
          "body": Object {
            "color": "rgb(201, 201, 201)",
            "fontSize": "14px",
          },
          "button": Object {
            "color": "#ffffff",
            "fontSize": "14px",
          },
          "caption": Object {
            "color": "rgb(140, 140, 140)",
            "fontSize": "12px",
          },
          "disable": Object {
            "color": "rgb(153, 153, 153)",
          },
          "heading": Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": "16px",
            "fontWeight": 600,
          },
          "link": Object {
            "color": "#15a9a9",
            "fontSize": "12px",
          },
          "title": Object {
            "color": "rgb(226, 226, 226)",
            "fontSize": "24px",
            "fontWeight": "bold",
          },
        },
        "default": Object {
          "color": "#37373a",
          "fontFamily": "Open sans, sans-serif",
        },
        "defaultOnDarkBg": Object {
          "color": "#fff",
          "fontFamily": "Open sans, sans-serif",
        },
        "light": Object {
          "body": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "14px",
          },
          "button": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "14px",
          },
          "caption": Object {
            "color": "rgb(114, 114, 114)",
            "fontSize": "12px",
          },
          "disable": Object {
            "color": "rgb(102, 102, 102)",
          },
          "heading": Object {
            "color": "rgb(28, 28, 28)",
            "fontSize": "16px",
            "fontWeight": 600,
          },
          "link": Object {
            "color": "#15a9a9",
            "fontSize": "12px",
          },
          "title": Object {
            "color": "rgb(28, 28, 28)",
            "fontSize": "24px",
            "fontWeight": "bold",
          },
        },
      },
      "link": Object {
        "linkOnBgDark": Object {
          "color": "#F3F3F2",
          "cursor": "pointer",
          "textDecoration": "none",
        },
        "linkOnBgDarktHover": Object {
          "color": "#26a29a",
        },
        "linkOnBgLight": Object {
          "color": "rgb(114, 114, 114)",
          "cursor": "pointer",
          "textDecoration": "none",
        },
        "linkOnBgLightHover": Object {
          "color": "#26a29a",
        },
      },
      "marketingText": Object {
        "dark": Object {
          "body": Object {
            "color": "rgb(255, 255, 255)",
            "fontSize": "16px",
          },
          "button": Object {
            "color": "rgb(255, 255, 255)",
            "fontSize": "14px",
          },
          "heading": Object {
            "color": "rgb(255, 255, 255)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "18px",
            "fontWeight": 600,
          },
          "title": Object {
            "color": "rgb(255, 255, 255)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "30px",
            "fontWeight": "bold",
          },
        },
        "light": Object {
          "body": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "16px",
          },
          "button": Object {
            "color": "rgb(53, 53, 53)",
            "fontSize": "14px",
          },
          "heading": Object {
            "color": "rgb(28, 28, 28)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "18px",
            "fontWeight": 600,
          },
          "title": Object {
            "color": "rgb(28, 28, 28)",
            "fontFamilly": "'Fira Sans', sans-serif",
            "fontSize": "30px",
            "fontWeight": "bold",
          },
        },
      },
      "padding": Object {
        "breathPadding": "1em",
        "defaultPadding": "24px",
        "heading": "10px 0",
        "title": "15px 0",
      },
      "palette": Object {
        "accent": Object {
          "dark": "rgb(30, 129, 123)",
          "light": "rgb(81, 180, 174)",
          "main": "#26a29a",
        },
        "charts": Object {
          "color1": "#64cfba",
          "color2": "#62acba",
          "color3": "#5789b3",
          "color4": "#476ca2",
          "color5": "#335184",
          "color6": "#1b3c4f",
        },
        "darkGrey": "#222222",
        "extraLightGrey": "#c2c2c2",
        "grey": "#9a9a9a",
        "lightGrey": "#d4d4d4",
        "neutral": Object {
          "dark": "rgb(114, 114, 114)",
          "darker": "rgb(53, 53, 53)",
          "darkest": "rgb(28, 28, 28)",
          "lightDark": "rgb(216, 216, 216)",
          "lightestDark": "rgb(242, 242, 242)",
          "neutral": "rgb(153, 153, 153)",
        },
        "primary": Object {
          "dark": "rgb(21, 48, 63)",
          "light": "rgb(72, 99, 114)",
          "main": "#1b3c4f",
        },
        "pureWhite": "#FFFFFF",
        "semantic": Object {
          "danger": "#d13f48",
          "default": "#cecece",
          "error": "#d13f48",
          "info": "#3e53c1",
          "success": "#009688",
          "warning": "#ff9800",
        },
        "white": "#F3F3F2",
      },
      "root": Object {
        "fontSize": "14p",
      },
      "sc": Object {
        "h1": Array [
          "font-size: 1.85em; margin: .67em 0;",
        ],
        "h2": Array [
          "font-size: 1.70em; margin: .6em 0;",
        ],
        "h3": Array [
          "font-size: 1.38em; margin: .5em 0;",
        ],
        "h4": Array [
          "font-size: 1.2em; margin: .5em 0;",
        ],
        "h5": Array [
          "font-size: 1em; margin: .5em 0;",
        ],
        "h6": Array [
          "font-size: .86em; margin: .5em 0;",
        ],
        "title": Array [
          "
      color: ",
          "#222222",
          ";
      font-weight: bold;
    ",
        ],
      },
      "shadow": Object {
        "base": "rgba(0, 0, 0, 0.12) 0px 1px 6px, rgba(0, 0, 0, 0.12) 0px 1px 4px ",
      },
      "title": Object {
        "color": undefined,
      },
      "transition": Object {
        "default": "450ms cubic-bezier(0.23, 1, 0.32, 1) ",
        "defaultAll": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) ",
        "delay": "0ms ",
        "duration": "450ms ",
        "durationIn": "232ms ",
        "durationOut": "196ms ",
        "easing": "cubic-bezier(0.23, 1, 0.32, 1) ",
      },
      "wrapper": Object {
        ".uxi-root": Object {
          "height": "100%",
        },
        ".uxi_container": Object {
          "margin": "0 auto",
          "width": "100%",
        },
        "a": Object {
          "color": "#26a29a",
          "textDecoration": "none",
        },
        "a:hover": Object {
          "color": "rgb(59, 171, 164)",
          "textDecoration": "none",
        },
        "body": Object {
          "height": "100%",
          "margin": 0,
          "padding": 0,
        },
        "h1, h2, h3, h4": Object {
          "color": "rgb(114, 114, 114)",
        },
        "html": Object {
          "background": "#F3F3F2",
          "color": "#222222",
          "fontFamily": "'Source Sans Pro', sans-serif",
          "height": "100%",
          "margin": 0,
          "padding": 0,
        },
        "mediaQueries": Object {
          "(min-width: 1200px)": Object {
            ".uxi_container": Object {
              "margin": "0 auto",
              "maxWidth": "1170px",
            },
          },
          "(min-width: 768px)": Object {
            ".uxi_container": Object {
              "margin": "0 auto",
              "maxWidth": "750px",
            },
          },
          "(min-width: 992px)": Object {
            ".uxi_container": Object {
              "margin": "0 auto",
              "maxWidth": "970px",
            },
          },
        },
        "table": Object {
          "margin": 0,
          "padding": 0,
        },
        "td": Object {
          "padding": "5px 10px",
        },
        "ul": Object {
          "listStyle": "none",
          "margin": 0,
          "padding": 0,
        },
      },
    }
  }
>
  <styled.div
    data-globalStyles={true}
  >
    <ThemeProvider
      extendTheme={Object {}}
      isContained={false}
      palette={Object {}}
      theme={Object {}}
    >
      <div
        style={
          Object {
            "height": "100%",
          }
        }
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": "
    

  @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800');


    

@-webkit-keyframes rcToolTipZoomIn {
  0% {
    opacity: 0;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(0, 0);
    transform: scale(0, 0);
  }
  100% {
    opacity: 1;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(1, 1);
    transform: scale(1, 1);
  }
}

@keyframes rcToolTipZoomIn {
  0% {
    opacity: 0;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(0, 0);
    transform: scale(0, 0);
  }
  100% {
    opacity: 1;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(1, 1);
    transform: scale(1, 1);
  }
}

@-webkit-keyframes rcToolTipZoomOut {
  0% {
    opacity: 1;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(1, 1);
    transform: scale(1, 1);
  }
  100% {
    opacity: 0;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(0, 0);
    transform: scale(0, 0);
  }
}

@keyframes rcToolTipZoomOut {
  0% {
    opacity: 1;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(1, 1);
    transform: scale(1, 1);
  }
  100% {
    opacity: 0;
    -webkit-transform-origin: 50% 50%;
    transform-origin: 50% 50%;
    -webkit-transform: scale(0, 0);
    transform: scale(0, 0);
  }
}

.rc-tooltip {
  position: absolute;
  z-index: 1070;
  display: block;
  visibility: visible;
  font-size: 12px;
  line-height: 1.5;
  opacity: 0.9;
}

.rc-tooltip-hidden {
  display: none;
}

.rc-tooltip-placement-top,
.rc-tooltip-placement-topLeft,
.rc-tooltip-placement-topRight {
  padding: 5px 0 9px 0;
}

.rc-tooltip-placement-right,
.rc-tooltip-placement-rightTop,
.rc-tooltip-placement-rightBottom {
  padding: 0 5px 0 9px;
}

.rc-tooltip-placement-bottom,
.rc-tooltip-placement-bottomLeft,
.rc-tooltip-placement-bottomRight {
  padding: 9px 0 5px 0;
}

.rc-tooltip-placement-left,
.rc-tooltip-placement-leftTop,
.rc-tooltip-placement-leftBottom {
  padding: 0 9px 0 5px;
}

.rc-tooltip-inner {
  padding: 5px 10px 2px 10px;
  color: #fff;
  text-align: left;
  text-decoration: none;
  background-color: #373737;
  border-radius: 6px;
  box-shadow: 0 0 4px rgba(0, 0, 0, 0.17);
  min-height: 24px;
}

.rc-tooltip-arrow {
  position: absolute;
  width: 0;
  height: 0;
  border-color: transparent;
  border-style: solid;
}

.rc-tooltip-placement-top .rc-tooltip-arrow,
.rc-tooltip-placement-topLeft .rc-tooltip-arrow,
.rc-tooltip-placement-topRight .rc-tooltip-arrow {
  bottom: 4px;
  margin-left: -5px;
  border-width: 5px 5px 0;
  border-top-color: #373737;
}

.rc-tooltip-placement-top .rc-tooltip-arrow {
  left: 50%;
}

.rc-tooltip-placement-topLeft .rc-tooltip-arrow {
  left: 15%;
}

.rc-tooltip-placement-topRight .rc-tooltip-arrow {
  right: 15%;
}

.rc-tooltip-placement-right .rc-tooltip-arrow,
.rc-tooltip-placement-rightTop .rc-tooltip-arrow,
.rc-tooltip-placement-rightBottom .rc-tooltip-arrow {
  left: 4px;
  margin-top: -5px;
  border-width: 5px 5px 5px 0;
  border-right-color: #373737;
}

.rc-tooltip-placement-right .rc-tooltip-arrow {
  top: 50%;
}

.rc-tooltip-placement-rightTop .rc-tooltip-arrow {
  top: 15%;
  margin-top: 0;
}

.rc-tooltip-placement-rightBottom .rc-tooltip-arrow {
  bottom: 15%;
}

.rc-tooltip-placement-left .rc-tooltip-arrow,
.rc-tooltip-placement-leftTop .rc-tooltip-arrow,
.rc-tooltip-placement-leftBottom .rc-tooltip-arrow {
  right: 4px;
  margin-top: -5px;
  border-width: 5px 0 5px 5px;
  border-left-color: #373737;
}

.rc-tooltip-placement-left .rc-tooltip-arrow {
  top: 50%;
}

.rc-tooltip-placement-leftTop .rc-tooltip-arrow {
  top: 15%;
  margin-top: 0;
}

.rc-tooltip-placement-leftBottom .rc-tooltip-arrow {
  bottom: 15%;
}

.rc-tooltip-placement-bottom .rc-tooltip-arrow,
.rc-tooltip-placement-bottomLeft .rc-tooltip-arrow,
.rc-tooltip-placement-bottomRight .rc-tooltip-arrow {
  top: 4px;
  margin-left: -5px;
  border-width: 0 5px 5px;
  border-bottom-color: #373737;
}

.rc-tooltip-placement-bottom .rc-tooltip-arrow {
  left: 50%;
}

.rc-tooltip-placement-bottomLeft .rc-tooltip-arrow {
  left: 15%;
}

.rc-tooltip-placement-bottomRight .rc-tooltip-arrow {
  right: 15%;
}

.rc-tooltip.rc-tooltip-zoom-enter,
.rc-tooltip.rc-tooltip-zoom-leave {
  display: block;
}

.rc-tooltip-zoom-enter,
.rc-tooltip-zoom-appear {
  opacity: 0;
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
  animation-timing-function: cubic-bezier(0.18, 0.89, 0.32, 1.28);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.rc-tooltip-zoom-leave {
  -webkit-animation-duration: 0.3s;
  animation-duration: 0.3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
  -webkit-animation-timing-function: cubic-bezier(0.6, -0.3, 0.74, 0.05);
  animation-timing-function: cubic-bezier(0.6, -0.3, 0.74, 0.05);
  -webkit-animation-play-state: paused;
  animation-play-state: paused;
}

.rc-tooltip-zoom-enter.rc-tooltip-zoom-enter-active,
.rc-tooltip-zoom-appear.rc-tooltip-zoom-appear-active {
  -webkit-animation-name: rcToolTipZoomIn;
  animation-name: rcToolTipZoomIn;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}

.rc-tooltip-zoom-leave.rc-tooltip-zoom-leave-active {
  -webkit-animation-name: rcToolTipZoomOut;
  animation-name: rcToolTipZoomOut;
  -webkit-animation-play-state: running;
  animation-play-state: running;
}




    html {
      min-height: 100%;
      margin: 0;
      padding: 0;
      background: #F3F3F2;
      font-family: 'Open Sans', sans-serif;
      font-weight: 400;
      color: #222222;
    }
    body {
      min-height: 100%;
      margin: 0;
      padding: 0;
      font-size: 16px;
    }


    /** Links */
    a {
      color: #26a29a;
      text-decoration: none;
      cursor: pointer;
    }
    a:hover {
      color: rgb(59, 171, 164);
      text-decoration: underline;
    }


    /** Headings */
    h1, h2, h3, h4 {
      color: currentColor;
    }


    /** UL */
    ul {
      margin: 0;
      padding: 0;
      list-style: none;
    }


    /** SVG */
    svg {
      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) ;
    }
    svg.uxi_svg-icon-wrapper {
      transition: none;
    }
    svg.uxi_svg-icon-wrapper svg {
      transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) ;
    }
    /* little trick relating to SvgIcon: a svg wrapper */
    // svg>svg { fill: inherit; }


    /**
     * Extend using css from styled-components
     */
    
  .uxi-root {
    height: 100%;
    .uxi_container {
      width: 100%;
      margin: 0 auto;
    }
    @media screen and (min-width: 768px) {
      .uxi_container {
        max-width: 750px;
        margin: 0 auto;
      }
    }
    @media screen and (min-width: 992px) {
      .uxi_container {
        max-width: 970px;
        margin: 0 auto;
      }
    }
    @media screen and (min-width: 1200px) {
      .uxi_container {
        max-width: 1170px;
        margin: 0 auto;
      }
    }
  }

    
  .uxi_container .row {
    margin-left: -0.75rem;
    margin-right: -0.75rem;
  }
  .uxi_row {
    margin-left: auto;
    margin-right: auto;
  }
  .uxi_row.uxi_row_notCentered {
    margin-left: 0;
    margin-right: 0;
  }
  .uxi_row:after {
    content: \\"\\";
    display: table;
  }
    clear: both;
  .uxi_row .uxi_col {
    float: left;
    box-sizing: border-box;
    padding: 0 0.75rem;
  }
  .uxi_row .uxi_col[class*=\\"push-\\"],
  .uxi_row .uxi_col[class*=\\"pull-\\"] {
    position: relative;
  }
  .uxi_row .uxi_col.s1 {
    width: 8.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s2 {
    width: 16.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s3 {
    width: 25%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s4 {
    width: 33.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s5 {
    width: 41.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s6 {
    width: 50%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s7 {
    width: 58.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s8 {
    width: 66.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s9 {
    width: 75%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s10 {
    width: 83.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s11 {
    width: 91.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.s12 {
    width: 100%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_row .uxi_col.offset-s1 {
    margin-left: 8.33333%;
  }
  .uxi_row .uxi_col.pull-s1 {
    right: 8.33333%;
  }
  .uxi_row .uxi_col.push-s1 {
    left: 8.33333%;
  }
  .uxi_row .uxi_col.offset-s2 {
    margin-left: 16.66667%;
  }
  .uxi_row .uxi_col.pull-s2 {
    right: 16.66667%;
  }
  .uxi_row .uxi_col.push-s2 {
    left: 16.66667%;
  }
  .uxi_row .uxi_col.offset-s3 {
    margin-left: 25%;
  }
  .uxi_row .uxi_col.pull-s3 {
    right: 25%;
  }
  .uxi_row .uxi_col.push-s3 {
    left: 25%;
  }
  .uxi_row .uxi_col.offset-s4 {
    margin-left: 33.33333%;
  }
  .uxi_row .uxi_col.pull-s4 {
    right: 33.33333%;
  }
  .uxi_row .uxi_col.push-s4 {
    left: 33.33333%;
  }
  .uxi_row .uxi_col.offset-s5 {
    margin-left: 41.66667%;
  }
  .uxi_row .uxi_col.pull-s5 {
    right: 41.66667%;
  }
  .uxi_row .uxi_col.push-s5 {
    left: 41.66667%;
  }
  .uxi_row .uxi_col.offset-s6 {
    margin-left: 50%;
  }
  .uxi_row .uxi_col.pull-s6 {
    right: 50%;
  }
  .uxi_row .uxi_col.push-s6 {
    left: 50%;
  }
  .uxi_row .uxi_col.offset-s7 {
    margin-left: 58.33333%;
  }
  .uxi_row .uxi_col.pull-s7 {
    right: 58.33333%;
  }
  .uxi_row .uxi_col.push-s7 {
    left: 58.33333%;
  }
  .uxi_row .uxi_col.offset-s8 {
    margin-left: 66.66667%;
  }
  .uxi_row .uxi_col.pull-s8 {
    right: 66.66667%;
  }
  .uxi_row .uxi_col.push-s8 {
    left: 66.66667%;
  }
  .uxi_row .uxi_col.offset-s9 {
    margin-left: 75%;
  }
  .uxi_row .uxi_col.pull-s9 {
    right: 75%;
  }
  .uxi_row .uxi_col.push-s9 {
    left: 75%;
  }
  .uxi_row .uxi_col.offset-s10 {
    margin-left: 83.33333%;
  }
  .uxi_row .uxi_col.pull-s10 {
    right: 83.33333%;
  }
  .uxi_row .uxi_col.push-s10 {
    left: 83.33333%;
  }
  .uxi_row .uxi_col.offset-s11 {
    margin-left: 91.66667%;
  }
  .uxi_row .uxi_col.pull-s11 {
    right: 91.66667%;
  }
  .uxi_row .uxi_col.push-s11 {
    left: 91.66667%;
  }
  .uxi_row .uxi_col.offset-s12 {
    margin-left: 100%;
  }
  .uxi_row .uxi_col.pull-s12 {
    right: 100%;
  }
  .uxi_row .uxi_col.push-s12 {
    left: 100%;
  }
  @media only screen and (min-width: 601px) {
    .uxi_row .uxi_col.m1 {
      width: 8.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m2 {
      width: 16.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m3 {
      width: 25%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m4 {
      width: 33.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m5 {
      width: 41.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m6 {
      width: 50%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m7 {
      width: 58.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m8 {
      width: 66.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m9 {
      width: 75%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m10 {
      width: 83.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m11 {
      width: 91.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.m12 {
      width: 100%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.offset-m1 {
      margin-left: 8.33333%;
    }
    .uxi_row .uxi_col.pull-m1 {
      right: 8.33333%;
    }
    .uxi_row .uxi_col.push-m1 {
      left: 8.33333%;
    }
    .uxi_row .uxi_col.offset-m2 {
      margin-left: 16.66667%;
    }
    .uxi_row .uxi_col.pull-m2 {
      right: 16.66667%;
    }
    .uxi_row .uxi_col.push-m2 {
      left: 16.66667%;
    }
    .uxi_row .uxi_col.offset-m3 {
      margin-left: 25%;
    }
    .uxi_row .uxi_col.pull-m3 {
      right: 25%;
    }
    .uxi_row .uxi_col.push-m3 {
      left: 25%;
    }
    .uxi_row .uxi_col.offset-m4 {
      margin-left: 33.33333%;
    }
    .uxi_row .uxi_col.pull-m4 {
      right: 33.33333%;
    }
    .uxi_row .uxi_col.push-m4 {
      left: 33.33333%;
    }
    .uxi_row .uxi_col.offset-m5 {
      margin-left: 41.66667%;
    }
    .uxi_row .uxi_col.pull-m5 {
      right: 41.66667%;
    }
    .uxi_row .uxi_col.push-m5 {
      left: 41.66667%;
    }
    .uxi_row .uxi_col.offset-m6 {
      margin-left: 50%;
    }
    .uxi_row .uxi_col.pull-m6 {
      right: 50%;
    }
    .uxi_row .uxi_col.push-m6 {
      left: 50%;
    }
    .uxi_row .uxi_col.offset-m7 {
      margin-left: 58.33333%;
    }
    .uxi_row .uxi_col.pull-m7 {
      right: 58.33333%;
    }
    .uxi_row .uxi_col.push-m7 {
      left: 58.33333%;
    }
    .uxi_row .uxi_col.offset-m8 {
      margin-left: 66.66667%;
    }
    .uxi_row .uxi_col.pull-m8 {
      right: 66.66667%;
    }
    .uxi_row .uxi_col.push-m8 {
      left: 66.66667%;
    }
    .uxi_row .uxi_col.offset-m9 {
      margin-left: 75%;
    }
    .uxi_row .uxi_col.pull-m9 {
      right: 75%;
    }
    .uxi_row .uxi_col.push-m9 {
      left: 75%;
    }
    .uxi_row .uxi_col.offset-m10 {
      margin-left: 83.33333%;
    }
    .uxi_row .uxi_col.pull-m10 {
      right: 83.33333%;
    }
    .uxi_row .uxi_col.push-m10 {
      left: 83.33333%;
    }
    .uxi_row .uxi_col.offset-m11 {
      margin-left: 91.66667%;
    }
    .uxi_row .uxi_col.pull-m11 {
      right: 91.66667%;
    }
    .uxi_row .uxi_col.push-m11 {
      left: 91.66667%;
    }
    .uxi_row .uxi_col.offset-m12 {
      margin-left: 100%;
    }
    .uxi_row .uxi_col.pull-m12 {
      right: 100%;
    }
    .uxi_row .uxi_col.push-m12 {
      left: 100%;
    }
  }
  @media only screen and (min-width: 993px) {
    .uxi_row .uxi_col.l1 {
      width: 8.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l2 {
      width: 16.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l3 {
      width: 25%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l4 {
      width: 33.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l5 {
      width: 41.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l6 {
      width: 50%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l7 {
      width: 58.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l8 {
      width: 66.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l9 {
      width: 75%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l10 {
      width: 83.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l11 {
      width: 91.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.l12 {
      width: 100%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_row .uxi_col.offset-l1 {
      margin-left: 8.33333%;
    }
    .uxi_row .uxi_col.pull-l1 {
      right: 8.33333%;
    }
    .uxi_row .uxi_col.push-l1 {
      left: 8.33333%;
    }
    .uxi_row .uxi_col.offset-l2 {
      margin-left: 16.66667%;
    }
    .uxi_row .uxi_col.pull-l2 {
      right: 16.66667%;
    }
    .uxi_row .uxi_col.push-l2 {
      left: 16.66667%;
    }
    .uxi_row .uxi_col.offset-l3 {
      margin-left: 25%;
    }
    .uxi_row .uxi_col.pull-l3 {
      right: 25%;
    }
    .uxi_row .uxi_col.push-l3 {
      left: 25%;
    }
    .uxi_row .uxi_col.offset-l4 {
      margin-left: 33.33333%;
    }
    .uxi_row .uxi_col.pull-l4 {
      right: 33.33333%;
    }
    .uxi_row .uxi_col.push-l4 {
      left: 33.33333%;
    }
    .uxi_row .uxi_col.offset-l5 {
      margin-left: 41.66667%;
    }
    .uxi_row .uxi_col.pull-l5 {
      right: 41.66667%;
    }
    .uxi_row .uxi_col.push-l5 {
      left: 41.66667%;
    }
    .uxi_row .uxi_col.offset-l6 {
      margin-left: 50%;
    }
    .uxi_row .uxi_col.pull-l6 {
      right: 50%;
    }
    .uxi_row .uxi_col.push-l6 {
      left: 50%;
    }
    .uxi_row .uxi_col.offset-l7 {
      margin-left: 58.33333%;
    }
    .uxi_row .uxi_col.pull-l7 {
      right: 58.33333%;
    }
    .uxi_row .uxi_col.push-l7 {
      left: 58.33333%;
    }
    .uxi_row .uxi_col.offset-l8 {
      margin-left: 66.66667%;
    }
    .uxi_row .uxi_col.pull-l8 {
      right: 66.66667%;
    }
    .uxi_row .uxi_col.push-l8 {
      left: 66.66667%;
    }
    .uxi_row .uxi_col.offset-l9 {
      margin-left: 75%;
    }
    .uxi_row .uxi_col.pull-l9 {
      right: 75%;
    }
    .uxi_row .uxi_col.push-l9 {
      left: 75%;
    }
    .uxi_row .uxi_col.offset-l10 {
      margin-left: 83.33333%;
    }
    .uxi_row .uxi_col.pull-l10 {
      right: 83.33333%;
    }
    .uxi_row .uxi_col.push-l10 {
      left: 83.33333%;
    }
    .uxi_row .uxi_col.offset-l11 {
      margin-left: 91.66667%;
    }
    .uxi_row .uxi_col.pull-l11 {
      right: 91.66667%;
    }
    .uxi_row .uxi_col.push-l11 {
      left: 91.66667%;
    }
    .uxi_row .uxi_col.offset-l12 {
      margin-left: 100%;
    }
    .uxi_row .uxi_col.pull-l12 {
      right: 100%;
    }
    .uxi_row .uxi_col.push-l12 {
      left: 100%;
    }
  }

    
  .uxi_s_row {
    margin-left: auto;
    margin-right: auto;
  }
  .uxi_s_row.uxi_s_row_notCentered {
    margin-left: 0;
    margin-right: 0;
  }
  .uxi_s_row:after {
    content: \\"\\";
    display: table;
    clear: both;
  }
  .uxi_s_row .uxi_s_col {
    float: left;
    box-sizing: border-box;
  }
  .uxi_s_row .uxi_s_col[class*=\\"push-\\"],
  .uxi_s_row .uxi_s_col[class*=\\"pull-\\"] {
    position: relative;
  }
  .uxi_s_row .uxi_s_col.s1 {
    width: 8.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s2 {
    width: 16.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s3 {
    width: 25%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s4 {
    width: 33.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s5 {
    width: 41.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s6 {
    width: 50%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s7 {
    width: 58.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s8 {
    width: 66.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s9 {
    width: 75%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s10 {
    width: 83.33333%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s11 {
    width: 91.66667%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.s12 {
    width: 100%;
    margin-left: auto;
    left: auto;
    right: auto;
  }
  .uxi_s_row .uxi_s_col.offset-s1 {
    margin-left: 8.33333%;
  }
  .uxi_s_row .uxi_s_col.pull-s1 {
    right: 8.33333%;
  }
  .uxi_s_row .uxi_s_col.push-s1 {
    left: 8.33333%;
  }
  .uxi_s_row .uxi_s_col.offset-s2 {
    margin-left: 16.66667%;
  }
  .uxi_s_row .uxi_s_col.pull-s2 {
    right: 16.66667%;
  }
  .uxi_s_row .uxi_s_col.push-s2 {
    left: 16.66667%;
  }
  .uxi_s_row .uxi_s_col.offset-s3 {
    margin-left: 25%;
  }
  .uxi_s_row .uxi_s_col.pull-s3 {
    right: 25%;
  }
  .uxi_s_row .uxi_s_col.push-s3 {
    left: 25%;
  }
  .uxi_s_row .uxi_s_col.offset-s4 {
    margin-left: 33.33333%;
  }
  .uxi_s_row .uxi_s_col.pull-s4 {
    right: 33.33333%;
  }
  .uxi_s_row .uxi_s_col.push-s4 {
    left: 33.33333%;
  }
  .uxi_s_row .uxi_s_col.offset-s5 {
    margin-left: 41.66667%;
  }
  .uxi_s_row .uxi_s_col.pull-s5 {
    right: 41.66667%;
  }
  .uxi_s_row .uxi_s_col.push-s5 {
    left: 41.66667%;
  }
  .uxi_s_row .uxi_s_col.offset-s6 {
    margin-left: 50%;
  }
  .uxi_s_row .uxi_s_col.pull-s6 {
    right: 50%;
  }
  .uxi_s_row .uxi_s_col.push-s6 {
    left: 50%;
  }
  .uxi_s_row .uxi_s_col.offset-s7 {
    margin-left: 58.33333%;
  }
  .uxi_s_row .uxi_s_col.pull-s7 {
    right: 58.33333%;
  }
  .uxi_s_row .uxi_s_col.push-s7 {
    left: 58.33333%;
  }
  .uxi_s_row .uxi_s_col.offset-s8 {
    margin-left: 66.66667%;
  }
  .uxi_s_row .uxi_s_col.pull-s8 {
    right: 66.66667%;
  }
  .uxi_s_row .uxi_s_col.push-s8 {
    left: 66.66667%;
  }
  .uxi_s_row .uxi_s_col.offset-s9 {
    margin-left: 75%;
  }
  .uxi_s_row .uxi_s_col.pull-s9 {
    right: 75%;
  }
  .uxi_s_row .uxi_s_col.push-s9 {
    left: 75%;
  }
  .uxi_s_row .uxi_s_col.offset-s10 {
    margin-left: 83.33333%;
  }
  .uxi_s_row .uxi_s_col.pull-s10 {
    right: 83.33333%;
  }
  .uxi_s_row .uxi_s_col.push-s10 {
    left: 83.33333%;
  }
  .uxi_s_row .uxi_s_col.offset-s11 {
    margin-left: 91.66667%;
  }
  .uxi_s_row .uxi_s_col.pull-s11 {
    right: 91.66667%;
  }
  .uxi_s_row .uxi_s_col.push-s11 {
    left: 91.66667%;
  }
  .uxi_s_row .uxi_s_col.offset-s12 {
    margin-left: 100%;
  }
  .uxi_s_row .uxi_s_col.pull-s12 {
    right: 100%;
  }
  .uxi_s_row .uxi_s_col.push-s12 {
    left: 100%;
  }
  @media only screen and (min-width: 601px) {
    .uxi_s_row .uxi_s_col.m1 {
      width: 8.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m2 {
      width: 16.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m3 {
      width: 25%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m4 {
      width: 33.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m5 {
      width: 41.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m6 {
      width: 50%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m7 {
      width: 58.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m8 {
      width: 66.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m9 {
      width: 75%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m10 {
      width: 83.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m11 {
      width: 91.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.m12 {
      width: 100%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.offset-m1 {
      margin-left: 8.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-m1 {
      right: 8.33333%;
    }
    .uxi_s_row .uxi_s_col.push-m1 {
      left: 8.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-m2 {
      margin-left: 16.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-m2 {
      right: 16.66667%;
    }
    .uxi_s_row .uxi_s_col.push-m2 {
      left: 16.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-m3 {
      margin-left: 25%;
    }
    .uxi_s_row .uxi_s_col.pull-m3 {
      right: 25%;
    }
    .uxi_s_row .uxi_s_col.push-m3 {
      left: 25%;
    }
    .uxi_s_row .uxi_s_col.offset-m4 {
      margin-left: 33.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-m4 {
      right: 33.33333%;
    }
    .uxi_s_row .uxi_s_col.push-m4 {
      left: 33.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-m5 {
      margin-left: 41.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-m5 {
      right: 41.66667%;
    }
    .uxi_s_row .uxi_s_col.push-m5 {
      left: 41.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-m6 {
      margin-left: 50%;
    }
    .uxi_s_row .uxi_s_col.pull-m6 {
      right: 50%;
    }
    .uxi_s_row .uxi_s_col.push-m6 {
      left: 50%;
    }
    .uxi_s_row .uxi_s_col.offset-m7 {
      margin-left: 58.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-m7 {
      right: 58.33333%;
    }
    .uxi_s_row .uxi_s_col.push-m7 {
      left: 58.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-m8 {
      margin-left: 66.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-m8 {
      right: 66.66667%;
    }
    .uxi_s_row .uxi_s_col.push-m8 {
      left: 66.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-m9 {
      margin-left: 75%;
    }
    .uxi_s_row .uxi_s_col.pull-m9 {
      right: 75%;
    }
    .uxi_s_row .uxi_s_col.push-m9 {
      left: 75%;
    }
    .uxi_s_row .uxi_s_col.offset-m10 {
      margin-left: 83.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-m10 {
      right: 83.33333%;
    }
    .uxi_s_row .uxi_s_col.push-m10 {
      left: 83.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-m11 {
      margin-left: 91.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-m11 {
      right: 91.66667%;
    }
    .uxi_s_row .uxi_s_col.push-m11 {
      left: 91.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-m12 {
      margin-left: 100%;
    }
    .uxi_s_row .uxi_s_col.pull-m12 {
      right: 100%;
    }
    .uxi_s_row .uxi_s_col.push-m12 {
      left: 100%;
    }
  }

  @media only screen and (min-width: 993px) {
    .uxi_s_row .uxi_s_col.l1 {
      width: 8.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l2 {
      width: 16.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l3 {
      width: 25%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l4 {
      width: 33.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l5 {
      width: 41.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l6 {
      width: 50%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l7 {
      width: 58.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l8 {
      width: 66.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l9 {
      width: 75%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l10 {
      width: 83.33333%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l11 {
      width: 91.66667%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.l12 {
      width: 100%;
      margin-left: auto;
      left: auto;
      right: auto;
    }
    .uxi_s_row .uxi_s_col.offset-l1 {
      margin-left: 8.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-l1 {
      right: 8.33333%;
    }
    .uxi_s_row .uxi_s_col.push-l1 {
      left: 8.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-l2 {
      margin-left: 16.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-l2 {
      right: 16.66667%;
    }
    .uxi_s_row .uxi_s_col.push-l2 {
      left: 16.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-l3 {
      margin-left: 25%;
    }
    .uxi_s_row .uxi_s_col.pull-l3 {
      right: 25%;
    }
    .uxi_s_row .uxi_s_col.push-l3 {
      left: 25%;
    }
    .uxi_s_row .uxi_s_col.offset-l4 {
      margin-left: 33.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-l4 {
      right: 33.33333%;
    }
    .uxi_s_row .uxi_s_col.push-l4 {
      left: 33.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-l5 {
      margin-left: 41.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-l5 {
      right: 41.66667%;
    }
    .uxi_s_row .uxi_s_col.push-l5 {
      left: 41.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-l6 {
      margin-left: 50%;
    }
    .uxi_s_row .uxi_s_col.pull-l6 {
      right: 50%;
    }
    .uxi_s_row .uxi_s_col.push-l6 {
      left: 50%;
    }
    .uxi_s_row .uxi_s_col.offset-l7 {
      margin-left: 58.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-l7 {
      right: 58.33333%;
    }
    .uxi_s_row .uxi_s_col.push-l7 {
      left: 58.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-l8 {
      margin-left: 66.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-l8 {
      right: 66.66667%;
    }
    .uxi_s_row .uxi_s_col.push-l8 {
      left: 66.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-l9 {
      margin-left: 75%;
    }
    .uxi_s_row .uxi_s_col.pull-l9 {
      right: 75%;
    }
    .uxi_s_row .uxi_s_col.push-l9 {
      left: 75%;
    }
    .uxi_s_row .uxi_s_col.offset-l10 {
      margin-left: 83.33333%;
    }
    .uxi_s_row .uxi_s_col.pull-l10 {
      right: 83.33333%;
    }
    .uxi_s_row .uxi_s_col.push-l10 {
      left: 83.33333%;
    }
    .uxi_s_row .uxi_s_col.offset-l11 {
      margin-left: 91.66667%;
    }
    .uxi_s_row .uxi_s_col.pull-l11 {
      right: 91.66667%;
    }
    .uxi_s_row .uxi_s_col.push-l11 {
      left: 91.66667%;
    }
    .uxi_s_row .uxi_s_col.offset-l12 {
      margin-left: 100%;
    }
    .uxi_s_row .uxi_s_col.pull-l12 {
      right: 100%;
    }
    .uxi_s_row .uxi_s_col.push-l12 {
      left: 100%;
    }
  }

  ",
            }
          }
        />
        <Button
          onClick={[Function]}
          onclick={[Function]}
          style={Object {}}
          text="YO!"
        />
      </div>
    </ThemeProvider>
  </styled.div>
</ThemeProvider>
`;
